Update TierTaggerConfig.java